--- a/calculadora.html
+++ b/calculadora.html
@@ -64,7 +64,6 @@ textarea{
   <nav class="nav-links d-none d-md-flex">
     <a href="index.html">Início</a>
     <a href="tabela.html">Preços</a>
-    <a href="shop.html">Loja</a>
     <a href="relatorio.html">Relatório</a>
     <a href="funcionarios.html">Funcionários</a>
   </nav>
@@ -167,7 +166,7 @@ textarea{
 
 <div class="form-check mb-2">
 <input type="checkbox" id="parceria" class="form-check-input">
-<label class="form-check-label">Parceria PM (10%)</label>
+<label class="form-check-label">Parceria(10%)</label>
 </div>
 
 <label>Total</label>
@@ -192,7 +191,7 @@ textarea{
 </div>
 
 <script>
-const WEBHOOK_URL = "COLE_AQUI_O_SEU_WEBHOOK";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1458680732950990971/nyCia8NKiZ7Z_BhLpRgkp3JukS5Tlkb9R7G3T1_L0pZ5suGC7_JPmWlMAFc_97BfsopC";
 
 const itens = document.querySelectorAll(".item");
 const totalInput = document.getElementById("total");
@@ -247,3 +246,4 @@ function limpar(){
 
 </body>
 </html>
+
