--- a/calculadora.html
+++ b/calculadora.html
@@ -30,6 +30,7 @@ body{
   text-decoration:none;
   font-weight:600;
 }
+.nav-links a:hover{color:#cfcfcf}
 .card{
   border-radius:14px;
   box-shadow:0 6px 20px rgba(0,0,0,.15);
@@ -237,9 +238,31 @@ function limpar(){
 }
 </script>
 
+<!-- BLOQUEIO NOME / ID -->
 <script>
 nome.addEventListener("input",()=> nome.value = nome.value.replace(/[^a-zA-ZÀ-ÿ\s]/g,""));
 id.addEventListener("input",()=> id.value = id.value.replace(/\D/g,""));
+</script>
+
+<!-- SEGURANÇA F12 -->
+<script>
+document.addEventListener("contextmenu",e=>e.preventDefault());
+document.addEventListener("selectstart",e=>e.preventDefault());
+
+document.addEventListener("keydown",e=>{
+  if(e.key==="F12") e.preventDefault();
+  if(e.ctrlKey && e.shiftKey && ["I","J","C","K"].includes(e.key.toUpperCase())) e.preventDefault();
+  if(e.ctrlKey && ["u","c","v","x","a"].includes(e.key.toLowerCase())) e.preventDefault();
+});
+
+(function(){
+  const d=new Image();
+  Object.defineProperty(d,"id",{get:function(){
+    document.body.innerHTML='<div style="background:black;color:white;height:100vh;display:flex;align-items:center;justify-content:center"><h1>⛔ ACESSO BLOQUEADO</h1></div>';
+    throw new Error();
+  }});
+  setInterval(()=>console.log(d),1000);
+})();
 </script>
 
 </body>
