--- a/calculadora.html
+++ b/calculadora.html
@@ -153,7 +153,45 @@ textarea{
 </div>
 </div>
 </div>
+<!-- ================= PARCERIAS ================= -->
+<div class="row mt-5">
+  <div class="col-12">
+    <div class="parcerias">
+      <h4>🤝 PARCERIAS OFICIAIS — FUSION CUSTOMS</h4>
 
+      <p>
+        A <strong>Fusion Customs</strong> mantém parcerias estratégicas com organizações, corporações e grupos
+        reconhecidos na cidade, garantindo benefícios exclusivos, atendimento prioritário
+        e condições especiais para nossos parceiros.
+      </p>
+
+      <p>
+        Clientes vinculados a parcerias oficiais podem receber <strong>descontos automáticos</strong>,
+        serviços diferenciados e suporte especializado, conforme os acordos firmados.
+      </p>
+
+      <p>
+        📌 <strong>Parcerias ativas incluem:</strong><br>
+        • Polícia Militar<br>
+        • Organizações governamentais<br>
+        • Empresas credenciadas<br>
+        • Facções e grupos autorizados<br>
+        • Outras instituições parceiras da Fusion Customs
+      </p>
+
+      <p>
+        Todas as parcerias são registradas, validadas e aplicadas diretamente no relatório,
+        garantindo <strong>transparência, segurança e confiança</strong> em cada serviço realizado.
+      </p>
+
+      <p class="text-center mt-3">
+        <strong>Fusion Customs</strong> — excelência, compromisso e respeito com quem anda junto 🚗🔥
+      </p>
+    </div>
+  </div>
+</div>
+
+</div>
 <!-- ================= RELATÓRIO ================= -->
 <div class="col-md-4">
 <div class="calc-container h-100">
@@ -266,4 +304,5 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
