--- a/calculadora.html
+++ b/calculadora.html
@@ -186,39 +186,54 @@ textarea{
 </div>
 </div>
 <!-- ================= PARCERIAS ================= -->
-<div class="row mt-5">
-  <div class="col-12">
-    <div class="parcerias">
-      <h4>🤝 PARCERIAS OFICIAIS — FUSION CUSTOMS</h4>
+<div class="container mt-5 mb-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-10">
+      <div class="card">
+        <div class="card-header">
+          🤝 PARCERIAS OFICIAIS — FUSION CUSTOMS
+        </div>
+        <div class="card-body">
 
-      <p>
-        A <strong>Fusion Customs</strong> mantém parcerias estratégicas com organizações, corporações e grupos
-        reconhecidos na cidade, garantindo benefícios exclusivos, atendimento prioritário
-        e condições especiais para nossos parceiros.
-      </p>
+          <p>
+            A <strong>Fusion Customs</strong> mantém parcerias estratégicas com organizações,
+            corporações e grupos reconhecidos na cidade, oferecendo
+            <strong>benefícios exclusivos</strong>, atendimento prioritário
+            e condições especiais.
+          </p>
 
-      <p>
-        Clientes vinculados a parcerias oficiais podem receber <strong>descontos automáticos</strong>,
-        serviços diferenciados e suporte especializado, conforme os acordos firmados.
-      </p>
+          <p>
+            Clientes vinculados a parcerias oficiais recebem
+            <strong>desconto automático de 10%</strong> em serviços elegíveis,
+            aplicado diretamente no relatório, garantindo total transparência.
+          </p>
 
-      <p>
-        📌 <strong>Parcerias ativas incluem:</strong><br>
-        • Polícia Militar<br>
-        • Organizações governamentais<br>
-        • Empresas credenciadas<br>
-        • Facções e grupos autorizados<br>
-        • Outras instituições parceiras da Fusion Customs
-      </p>
+          <div class="row mt-4">
+            <div class="col-md-6">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">🚓 Polícia Militar</li>
+                <li class="list-group-item">🏛️ Órgãos Governamentais</li>
+                <li class="list-group-item">🏢 Empresas Credenciadas</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">⚙️ Facções Autorizadas</li>
+                <li class="list-group-item">🤝 Organizações Parceiras</li>
+                <li class="list-group-item">🔒 Instituições Validadas</li>
+              </ul>
+            </div>
+          </div>
 
-      <p>
-        Todas as parcerias são registradas, validadas e aplicadas diretamente no relatório,
-        garantindo <strong>transparência, segurança e confiança</strong> em cada serviço realizado.
-      </p>
+          <hr class="my-4">
 
-      <p class="text-center mt-3">
-        <strong>Fusion Customs</strong> — excelência, compromisso e respeito com quem anda junto 🚗🔥
-      </p>
+          <p class="text-center mb-0">
+            <strong>Fusion Customs</strong> — excelência, compromisso e respeito
+            com quem anda junto 🚗🔥
+          </p>
+
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -304,6 +319,7 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
 
