--- a/index.html
+++ b/index.html
@@ -140,10 +140,8 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
       <div class="bg-dark p-3 rounded">
         <a href="#" class="mobile-link d-block py-2">Início</a>
         <a href="tabela.html" class="mobile-link d-block py-2">Preços</a>
-        <a href="shop.html" class="mobile-link d-block py-2">Loja</a>
-        <a href="relatorio.html" class="mobile-link d-block py-2">Relatório</a>
         <a href="funcionarios.html" class="mobile-link d-block py-2">Funcionários</a>
-        <a href="https://discord.gg/wunSmxVt" target="_blank" class="d-block discord-btn mt-2 text-center">
+        <a href="https://discord.gg/34kgePh5" target="_blank" class="d-block discord-btn mt-2 text-center">
           <i class="fa-brands fa-discord"></i> Discord
         </a>
       </div>
@@ -268,6 +266,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
