--- a/funcionarios.html
+++ b/funcionarios.html
@@ -114,10 +114,7 @@ body {
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
-      <a href="relatorio.html">Relatório</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
-        <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
   </div>
@@ -133,9 +130,9 @@ body {
   <div class="row single-card mb-4">
     <div class="col-lg-3 col-md-6 mb-4">
       <div class="card card-employee">
-        <img src="https://imgur.com/dRorkTC.png" class="card-img-top" alt="Carol Amud">
+        <img src="https://imgur.com/m3IO5MD.png" class="card-img-top" alt="Carol Amud">
         <div class="card-body text-center">
-          <h5 class="mb-0">Carol Amud</h5>
+          <h5 class="mb-0">DRK</h5>
           <p class="small text-muted">RESP MECÂNICA</p>
         </div>
       </div>
@@ -221,6 +218,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
