--- a/funcionarios.html
+++ b/funcionarios.html
@@ -147,7 +147,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">021 CUSTOMS</p>
+          <p class="small text-muted">FUSION CUSTOMS</p>
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">021 CUSTOMS</p>
+          <p class="small text-muted">FUSION CUSTOMS</p>
         </div>
       </div>
     </div>
@@ -170,7 +170,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">021 CUSTOMS</p>
+          <p class="small text-muted">FUSION CUSTOMS</p>
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">021 CUSTOMS</p>
+          <p class="small text-muted">FUSION CUSTOMS</p>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">João Britto</h5>
-          <p class="small text-muted">021 CUSTOMS</p>
+          <p class="small text-muted">FUSION CUSTOMSS</p>
         </div>
       </div>
     </div>
@@ -218,6 +218,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
