--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
     </div>
     <div class="col-sm-4 d-flex justify-content-center">
       <div class="card card-service" data-bs-toggle="modal" data-bs-target="#TunningModal">
-        <img src="https://i.imgur.com/5hYavQy.png" class="card-img-top" alt="Tunning de Veículos" draggable="false">
+        <img src="https://imgur.com/xzmK5Gu.png" class="card-img-top" alt="Tunning de Veículos" draggable="false">
         <div class="card-body text-center">
           <p class="card-text">Tunning de Veículos</p>
         </div>
@@ -284,3 +284,4 @@ toggler.addEventListener('click', () => mobileMenu.classList.toggle('show'));
 
 </body>
 </html>
+
