--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
         <a href="#" class="mobile-link d-block py-2">Início</a>
         <a href="tabela.html" class="mobile-link d-block py-2">Preços</a>
         <a href="funcionarios.html" class="mobile-link d-block py-2">Funcionários</a>
-        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="d-block discord-btn mt-2 text-center">
+        <a href="https://discord.gg/ejDg3YAuRn" target="_blank" class="d-block discord-btn mt-2 text-center">
           <i class="fa-brands fa-discord"></i> Discord
         </a>
       </div>
@@ -284,4 +284,5 @@ toggler.addEventListener('click', () => mobileMenu.classList.toggle('show'));
 
 </body>
 </html>
+
 
